# origin

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json
apps/backend/: .env.example  .gitignore  Dockerfile  README.md  jest.config.js  package.json  pyproject.toml  railway.toml  seed_fleet.py  seed_raw.py  start.sh  tsconfig.json
apps/backend-py/: README.md  pyproject.toml  railway.toml
apps/backend-py/prisma/: schema.prisma
apps/backend-py/src/origin_backend/: __init__.py  config.py  main.py
apps/backend-py/src/origin_backend/admin/: service.py
apps/backend-py/src/origin_backend/auth/: jwt.py  router.py  schemas.py  service.py
apps/backend-py/src/origin_backend/bookings/: service.py
apps/backend-py/src/origin_backend/calculator/: __init__.py
apps/backend-py/src/origin_backend/common/: auth.py  exceptions.py  prisma.py
apps/backend-py/src/origin_backend/contact/: __init__.py  router.py  schemas.py
apps/backend-py/src/origin_backend/customers/: router.py
apps/backend-py/src/origin_backend/health/: router.py
apps/backend-py/src/origin_backend/integrations/: checkout_com.py  firebase_push.py  google_maps.py  sendgrid_email.py  twilio_verify.py  whatsapp.py
apps/backend-py/src/origin_backend/leases/: router.py
apps/backend-py/src/origin_backend/maps/: __init__.py
apps/backend-py/src/origin_backend/payments/: router.py
apps/backend-py/src/origin_backend/vehicles/: router.py
apps/backend-py/src/origin_backend/webhooks/: checkout.py
apps/backend-py/tests/: conftest.py  test_admin_router.py  test_auth_jwt.py  test_auth_router.py  test_calculator_router.py  test_checkout_integration.py  test_contact_router.py  test_firebase_integration.py  test_maps_router.py  test_payments_router.py  test_tabby_integration.py  test_vehicles_router.py  test_whatsapp_integration.py
apps/backend/prisma/: init-schema.js  partials.py  schema.prisma  seed.sql  seed.ts
apps/backend/prisma/migrations/0001_init/: migration.sql
apps/backend/prisma/migrations/0002_add_foreign_key_indexes/: migration.sql
apps/backend/prisma/migrations/20260426_kyc_ocr/: migration.down.sql  migration.sql
apps/backend/prisma/migrations/20260427_fix_byd_wrx_seed_data/: migration.sql
apps/backend/prisma/migrations/20260428_fleet_brands_and_deposit/: migration.sql
apps/backend/prisma/migrations/20260429_admin_filter_indices/: migration.sql
apps/backend/prisma/migrations/20260430_password_reset_tokens/: migration.sql
apps/backend/prisma/migrations/20260502120000_v1_genesis/: migration.sql
apps/backend/prisma/migrations/20260502_enterprise_country_foundation/: migration.sql
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/admin/: admin.controller.ts  admin.module.ts  admin.service.ts
apps/backend/src/admin/dto/: create-vehicle.dto.ts  reject-reason.dto.ts  update-vehicle.dto.ts
apps/backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/backend/src/auth/dto/: admin-login.dto.ts  refresh-token.dto.ts  send-otp.dto.ts  verify-otp.dto.ts
apps/backend/src/auth/strategies/: jwt.strategy.ts
apps/backend/src/bookings/: bookings.controller.ts  bookings.module.ts  bookings.service.ts
apps/backend/src/bookings/dto/: create-booking.dto.ts
apps/backend/src/calculator/: calculator.controller.ts  calculator.module.ts  calculator.service.ts
apps/backend/src/calculator/dto/: quote.dto.ts
apps/backend/src/common/decorators/: current-user.decorator.ts  roles.decorator.ts
apps/backend/src/common/filters/: http-exception.filter.ts
apps/backend/src/common/guards/: roles.guard.ts
apps/backend/src/common/prisma/: prisma.service.ts
apps/backend/src/config/: countries.ts
apps/backend/src/contact/: contact.controller.ts  contact.service.ts
apps/backend/src/contact/dto/: create-contact.dto.ts
apps/backend/src/customers/: customers.controller.ts  customers.module.ts  customers.service.ts
apps/backend/src/customers/dto/: create-document.dto.ts  update-customer.dto.ts
apps/backend/src/health/: health.controller.ts  health.service.ts
apps/backend/src/integrations/: integrations.module.ts
apps/backend/src/integrations/checkout/: checkout-webhook.controller.ts  checkout.module.ts  checkout.service.ts
apps/backend/src/integrations/firebase/: firebase.service.ts
apps/backend/src/integrations/google-maps/: google-maps.controller.ts  google-maps.module.ts  google-maps.service.ts
apps/backend/src/integrations/sendgrid/: sendgrid.module.ts  sendgrid.service.ts
apps/backend/src/integrations/tabby/: tabby.module.ts  tabby.service.ts
apps/backend/src/integrations/twilio/: twilio.module.ts  twilio.service.ts
apps/backend/src/integrations/whatsapp/: whatsapp.module.ts  whatsapp.service.ts
apps/backend/src/leases/: leases.controller.ts  leases.module.ts  leases.service.ts
apps/backend/src/leases/dto/: renew-lease.dto.ts
apps/backend/src/origin_backend/: __init__.py  config.py  main.py
apps/backend/src/origin_backend/admin/: __init__.py  router.py  schemas.py  service.py
apps/backend/src/origin_backend/auth/: jwt.py  password_reset.py  router.py  service.py
apps/backend/src/origin_backend/bookings/: __init__.py  router.py  schemas.py  service.py
apps/backend/src/origin_backend/calculator/: router.py  schemas.py  service.py
apps/backend/src/payments/: payments.controller.ts  payments.module.ts  stripe.service.ts
apps/backend/src/vehicles/: vehicles.controller.ts  vehicles.module.ts  vehicles.service.ts
apps/backend/test/: auth.e2e-spec.ts
apps/backend/tests/: conftest.py  test_admin_router.py  test_auth_router.py  test_bookings_router.py  test_calculator_router.py  test_checkout_integration.py  test_customers_router.py  test_enterprise_country_schema.py  test_error_log.py  test_firebase_integration.py  test_kyc_router.py  test_leases_router.py  test_modular_boundaries.py  test_modular_public_api.py  test_pagination.py  test_payments_router.py  test_ratelimit.py  test_sendgrid_integration.py  test_smoke.py  test_startup_validation.py  test_tabby_integration.py
docs/: STATUS.md  (+12 more)
(+250 files in other folders)
