[project]
name = "origin-backend"
version = "0.1.0"
description = "Origin backend API — Python rewrite of the NestJS service"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Amr Sarhan", email = "amr.sarhan52@gmail.com" }]
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",      # ASGI server for production
    # Validation + settings
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Database (Prisma Python — same schema as Node backend)
    "prisma>=0.15.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",  # JWT issue/verify
    "passlib[bcrypt]>=1.7.4",            # admin password hashing
    "bcrypt>=4.1,<5.0",
    # Integrations
    "twilio>=9.0.0",
    "sendgrid>=6.11.0",
    "stripe>=11.0.0",
    "firebase-admin>=6.5.0",
    # HTTP client (some integrations need raw HTTP)
    "httpx>=0.27.0",
    # Logging
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",                 # for FastAPI test client
    "ruff>=0.7.0",                    # linter + formatter (replaces black + isort + flake8)
    "mypy>=1.13.0",                   # static type checker
    "respx>=0.21.1",                  # mock httpx for integration tests
]

# ── Tooling configuration ─────────────────────────────────────────

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/origin_backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # bugbear (common bugs)
    "UP",  # pyupgrade (use modern syntax)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long — formatter handles it
    "B008",   # function call in defaults — FastAPI's Depends() is the established pattern
]

[tool.ruff.lint.per-file-ignores]
# Test fixtures legitimately contain non-ASCII text (Arabic, Chinese, etc.)
# that ruff flags as RUF001/002/003 ambiguous-unicode. Suppress for tests only —
# production code still gets the full check.
"tests/**/*.py" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# Prisma-generated client doesn't have full stubs; allow that
[[tool.mypy.overrides]]
module = "prisma.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
