[project]
name = "origin-backend"
version = "1.0.0"
description = "Origin — backend API. Modular monolith for the Origin platform (Dubai/UAE)."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "prisma>=0.15.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "pyjwt[crypto]>=2.10.0",
  "argon2-cffi>=23.1.0",
  "httpx>=0.28.0",
  "python-ulid>=3.0.0",
  "stripe>=11.0.0",
  "twilio>=9.3.0",
  "sendgrid>=6.11.0",
  "azure-storage-blob>=12.24.0",
  "azure-ai-documentintelligence>=1.0.0",
  "azure-identity>=1.19.0",
  "phonenumbers>=8.13.0",
  "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "respx>=0.21.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/origin_backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
