[project]
name = "origin-backend"
version = "1.0.0"
description = "Origin — backend API. Modular monolith for the Origin platform (Dubai/UAE)."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "prisma>=0.15.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "pyjwt[crypto]>=2.10.0",
  "argon2-cffi>=23.1.0",
  "httpx>=0.28.0",
  "python-ulid>=3.0.0",
]
# Day-1 minimal. External-service SDKs (stripe, twilio, sendgrid, azure-blob,
# azure-ai-documentintelligence, azure-identity, phonenumbers, tenacity) added
# as their consuming modules ship in days 2-13 per docs/architecture/rebuild-erd.md §8.

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

# No [build-system] / [tool.hatch] / [tool.uv].package — this project is an
# application, not a library. uv sync just creates a venv with deps; we don't
# need a wheel built at install time. pytest.pythonpath makes `src/` importable.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
